# tdd-fastapi-docker

./: .gitignore  docker-compose.yml
app/: main.py
project/: Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt
project/app/: config.py  db.py  main.py
project/app/api/: ping.py
project/app/models/: tortoise.py
project/tests/: conftest.py  test_ping.py
