[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["schelip <fcominscheffel@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.111.1"
uvicorn = "^0.15.0"
asyncpg = "^0.24.0"
tortoise-orm = "^0.17.8"
pydantic-settings= "^2.4.0"
aerich = "^0.5.8"
pytest = "^8.3.2"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
